2014-09-06  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Unreviewed, EFL build fix when SHARED_CORE is on.

        * TestWebKitAPI/PlatformEfl.cmake:

2014-09-05  Lucas Forschler  <lforschler@apple.com>

        <https://webkit.org/b/136586> Add bots to Apple build/test queues
        
        Reviewed by Daniel Bates.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2014-09-05  Alexey Proskuryakov  <ap@apple.com>

        Buildbot metrics page gives wrong results after a new bot gets added
        https://bugs.webkit.org/show_bug.cgi?id=136516

        Reviewed by Tim Horton.

        Part 2: Fix elapsed times.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/MetricsAnalyzer.js:
        (Analyzer.prototype._countTimes): Made lastTestedRevisionByQueue contain undefined values
        until the first build in a queue. This happens to work as needed with _fullyTestedRevisionNumber().

2014-09-05  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [SOUP] Implement ResourceResponse::platformSuggestedFilename() when USE(SOUP) is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=136562

        Reviewed by Martin Robinson.

        * Scripts/run-gtk-tests:
        (TestRunner): Remove failure expectations for tests that now pass.

2014-09-04  Alexey Proskuryakov  <ap@apple.com>

        Dashboard metrics page wastes a lot of time sorting iterations
        https://bugs.webkit.org/show_bug.cgi?id=136559

        Reviewed by Tim Horton.

        Also fixes comments here and there, and adds a missing "var".

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotIteration.js:
        (BuildbotIteration.prototype._parseData):
        (BuildbotIteration.prototype._updateWithData):
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotQueue.js:
        (BuildbotQueue.prototype.loadAll):